우분투 검은화면

--- a/_posts/2024-08-21-Udemy-화이트-해킹-101-윤리적-해킹-기초부터-배우기.md
+++ b/_posts/2024-08-21-Udemy-화이트-해킹-101-윤리적-해킹-기초부터-배우기.md
@@ -411,6 +411,8 @@ root@kali:~#
 
 마지막으로 `ifconfig wlan0 up`하는 것은 잊지 말것
 
+### 5. 네트워크 해킹 - 연결 전 공격
+
 ### 5-1. 패킷 스니핑 기초
 
 이제 모니터 모드로 설정 했으니 공기중 모든 패킷을 캡쳐할 수 있다
@@ -570,3 +572,86 @@ Downloads  Public    embedded-browser-no-sandbox.json  test-01.kismet.csv
 ### 5-4. 연결해제 공격(네트워크에서 어떤 기기든 연결 해제하기)
 
 [Deauth Attack을 통한 와이파이 무력화](https://dundole.tistory.com/12)에 매우 자세하게 설명되어있기에 추천한다
+
+### 6-1. 액세스 획득 소개
+
+이번 섹션에서는 네트워크가 암호화를 쓸 때 그 암호화를 뚫고 액세스 하는 방법을 배우게 된다
+
+예를 들어 WEP, WPA, WPA2 등의 암호화 방법일 때
+
+### 6-2. WEP 암호화 해킹 이론
+
+> Wired Equivalent Privacy
+
+오래된 방법이지만 아직도 쓰이는 곳이 있다
+
+WEP는 보통 RC4라고 불리는 암호화 방법을 사용한다
+
+> 쉽게 설명하자면 
+
+1. `Hello world`라는 문장을 가진 데이터가 있다고 했을 때 이 데이터를 `키`를 가지고 `ADLKFJLD`이런식의 암호화된 데이터로 변경한다
+
+2. 그리고 이 패킷이 공중을 타고 날아가면 다시 AP(Access Point), 보통은 라우터에서 다시 `키`를 이용해 원래 데이터로 변경하여 읽는다
+
+라우터에서 클라이언트로 데이터를 전송할 때에도 동일하다
+
+특징은 `양 쪽 모두에게 키가 있어야 한다` 그래야 키가 없는 사람은 데이터를 찾아내도 데이터를 열어볼 수 없으니까
+
+> 좀 더 상세하게 설명하면
+
+1. WEP는 공기중에 전송되는 모든 데이터 마다 고유한 키를 생성한다. 그걸 위해 24비트짜리 랜덤 값을 가진 초기화 벡터(IV)를 만든다
+2. 그리고 이 IV를 사용자가 네트워크에 연결할 때 사용하는 암호 앞에 붙이는데 이 키 스트림을 패킷의 암호화에서 사용한다
+
+예를들면
+
+IV + Key(password) = Key stream
+
+의 과정으로 키 스트림을 만들고
+
+KeyStream + "Hello World"를 합쳐서 `ADLKFJLD`가 되는 식이다
+
+3. 데이터를 전송할 때에는 라우터가 데이터를 복호화 할 수 있도록 데이터 앞에 초기화 백터(IV)를 붙여서 전송하게 된다
+
+```
+IV
+-----
+ADLKFJLD
+```
+
+여기서 문제가 생긴다
+
+바로 IV는 암호화 되지 않았다는 것이다
+
+심지어 24비트로 길이가 정해져 있다!
+
+만약 트래픽이 많은 네트워크가 있다면 중복된 초기화 벡터가 많아질 테니 [통계적 분석 공격](https://zidarn87.tistory.com/103)에 취약해 진다
+
+아니 처음에 사람들은 어떻게 이걸 생각해냈지? 진짜 뚫는 사람도 대단하고 막아내려고 고안한 사람도 대단하다... 멋있다
+
+### 6-3. WEP 해킹 기초
+
+WEP 해킹을 하기 위해서는 위에서 말했듯이 네트워크에 트래픽이 많아야 한다
+
+그래야 많은 패킷을 얻어내고 그러면 중복된 IV값이 늘어나니 통계 분석 공격을 하기 용이해 진다
+
+패킷을 캡쳐 하기 위해서는 `airodump-ng`를 사용하고
+
+패킷을 분석하기 위해서는 `aircrack-ng`를 사용한다
+
+어.. 영상을 따라가며 테스트를 위해 WEP 네트워크를 하나 만들려고 했는데 일단 윈도우로는 아무리 핫스팟을 만들어도 암호화 종류를 설정할 수가 없다. 일단은 한번 우분투로 가서 보자
+
+![image](https://github.com/user-attachments/assets/71827c96-cafb-4af4-8777-8123775f60cd)
+
+아.. 안되나? 왜 설정에 WEP가 없을까...
+
+![image](https://github.com/user-attachments/assets/06850f46-a5c4-4dc3-95d5-5b993be59f8e)
+
+아하 내 랜카드가 애초에 WEP를 지원을 안하네... 심지어 iptime도 지원을 안한다. 허... 옛날 카드가 남아있는지 찾아봐야겠다
+
+WEP 300Mbps 11n USB무선 랜카드
+
+![image](https://github.com/user-attachments/assets/497eeccb-25de-4f0c-af9a-53bb5a9d5052)
+
+판매를 봤을 때는 된다고 써있는데 어쩌면 ubuntu에서 막는 걸지도
+
+와 깜짝이야 []()
