--- a/_posts/2024-08-21-Udemy-화이트-해킹-101-윤리적-해킹-기초부터-배우기.md
+++ b/_posts/2024-08-21-Udemy-화이트-해킹-101-윤리적-해킹-기초부터-배우기.md
@@ -654,4 +654,4 @@ WEP 300Mbps 11n USB무선 랜카드
 
 판매를 봤을 때는 된다고 써있는데 어쩌면 ubuntu에서 막는 걸지도
 
-와 깜짝이야 []()
+와 깜짝이야 [우분투 용량에 의한 검은화면 부팅 문제](https://oil-lamp-cat.github.io/posts/%EC%9A%B0%EB%B6%84%ED%88%AC-%EB%B6%80%ED%8C%85-%EA%B2%80%EC%9D%80%ED%99%94%EB%A9%B4-%EC%9A%A9%EB%9F%89/)
