부제목들 처리

--- a/_posts/2024-08-21-Udemy-화이트-해킹-101-윤리적-해킹-기초부터-배우기.md
+++ b/_posts/2024-08-21-Udemy-화이트-해킹-101-윤리적-해킹-기초부터-배우기.md
@@ -23,7 +23,7 @@ pin: true
 
 내가 선택한 강의 중에 유일하게 한글자막이 있고 꽤나 느리게 말하기에 편하게 보기 좋을것 같아 처음으로 선택했다
 
-#### 1. 강의 개요
+### 1. 강의 개요
 #### 1-1. 맛보기 - 윈도우 11 컴퓨터를 해킹하고 웹캠 액세스하기
 
 말 그대로 강의가 끝나면 어떤 작업들을 할 수 있을지에 관해 미리 보여주는 강의다
@@ -83,7 +83,7 @@ pin: true
 - 블랙햇 해커로부터 시스템의 보안 안전을 테스트 할 수 있다
 - 실제로 요즘 해킹 공격 횟수가 늘고 있다
 
-#### 2. 해킹 랩(Lab) 설정
+### 2. 해킹 랩(Lab) 설정
 
 나는 평소에 VBox(Virtual Box)를 쓰곤 했는데 이 강의에서는 VMWare를 쓰는 문제가..
 
@@ -167,7 +167,7 @@ Debian 기반의 리눅스 배포판으로 여러 해킹 및 침투 테스트를
 
 우분투는 노트북에 깔려 있기에 굳이 본 컴퓨터가 아닌 곳에 vm을 깔지는 않을 것이다
 
-#### 3. 리눅스 기초
+### 3. 리눅스 기초
 
 말 그대로 리눅스 기초에 관한 내용이다
 
@@ -216,7 +216,7 @@ apt-get install [프로그램 이름]
 sudo apt-get install terminator
 ```
 
-#### 4. 네트워크 해킹
+### 4. 네트워크 해킹
 
 #### 4-1. 네트워크 침투 테스트 및 해킹 개요
 
@@ -411,7 +411,7 @@ root@kali:~#
 
 마지막으로 `ifconfig wlan0 up`하는 것은 잊지 말것
 
-#### 5. 네트워크 해킹 - 연결 전 공격
+### 5. 네트워크 해킹 - 연결 전 공격
 
 #### 5-1. 패킷 스니핑 기초
 
@@ -572,6 +572,8 @@ Downloads  Public    embedded-browser-no-sandbox.json  test-01.kismet.csv
 #### 5-4. 연결해제 공격(네트워크에서 어떤 기기든 연결 해제하기)
 
 [Deauth Attack을 통한 와이파이 무력화](https://dundole.tistory.com/12)에 매우 자세하게 설명되어있기에 추천한다
+
+### 6. 네트워크 해킹 - 액세스 획득 - WEP 해킹
 
 #### 6-1. 액세스 획득 소개
 
