h1 태그는 하나만 쓸 수 있다더라

--- a/_posts/2024-08-21-Udemy-화이트-해킹-101-윤리적-해킹-기초부터-배우기.md
+++ b/_posts/2024-08-21-Udemy-화이트-해킹-101-윤리적-해킹-기초부터-배우기.md
@@ -19,7 +19,7 @@ pin: true
 
 아무래도 관심이 있었던 분야이기에 한번 공부하며 정리해 보기로 했다
 
-# \[한글자막] 화이트 해킹 101: 윤리적 해킹 기초부터 배우기!
+## \[한글자막] 화이트 해킹 101: 윤리적 해킹 기초부터 배우기!
 
 내가 선택한 강의 중에 유일하게 한글자막이 있고 꽤나 느리게 말하기에 편하게 보기 좋을것 같아 처음으로 선택했다
 
