--- a/_posts/2024-09-01-Udemy-화이트-해킹-101-윤리적-해킹-기초부터-배우기.md
+++ b/_posts/2024-09-01-Udemy-화이트-해킹-101-윤리적-해킹-기초부터-배우기.md
@@ -1087,3 +1087,177 @@ sudo hostapd_cli wps_pin any 12345670 0
 일단 다음 단계로 넘어가자
 
 ### 7-3. 핸드셰이크 캡쳐하기
+
+[WPA에 관하여](https://velog.io/@yun505/%EC%A1%B8%EC%97%85%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8-%EA%B0%9C%EB%85%90%EC%A0%95%EB%A6%AC-WPA2%EB%9E%80)
+
+[와이파이 암호법](https://www.netspotapp.com/ko/blog/wifi-security/wifi-encryption-and-security.html)
+
+만약에 `WPS`가 타겟 네트워크에 활성화 되어있지만 `PBC`가 활성화 되어있다면 `7-2`에서 시도한 방법은 통하지 않을 것이다
+
+그렇기에 직접 `WPA/WPA2`를 뚫어야 할 수밖에 없다
+
+하지만 `WPA/WPA2`는 `WEP`를 강화시킨 버전으로써 우리가 `WEP`에서 썼던 방법을 사용할 수는 없다
+
+`WPA/WPA2`의 키는 `WEP`와 달리 고정된 암호키를 사용하는 것이 아니라 `암호키 동적변경(TKIP)/(AES)`를 사용하기에 캡쳐한 데이터에서 통계분석기법을 사용할 수 없다
+
+이번 강의에서 사용하게 될 것은 바로 `handshake` 패킷이다
+
+이 패킷들은 네트워크에 연결하려는 클라이언트와 라우터 사이에서 주고 받는 패킷이다
+
+[무선 랜 해킹](https://ikersyit.tistory.com/29)이라는 좋은 블로그를 발견했다
+
+강의에서 너무 설명을 간단히 하는 바람에 왜 `handshake`패킷을 쓰는지, 그 패킷이 어떤 식으로 구성되어있는 지에 관해 나와있지 않아 위 블로그를 참조한다
+
+#### 실습 전 세팅
+
+![image](https://github.com/user-attachments/assets/063a8981-6f0b-4065-8180-8c4916290fc8)
+
+![Screenshot from 2024-09-01 00-47-00](https://github.com/user-attachments/assets/49719d77-d89d-4efe-976d-102e192ebb7d)
+
+이번에는 다행히 `UBUNTU`의 핫스팟은 `ENC`가 `WPA3`, `AUTH`는 `SAE`로 찍히길래 또 따로 설정해 줘야 하나 생각했지만 다행히 윈도우 핫스팟은 강의에 필요한 `WPA2`,`PSK`의 조건을 모두 갖추고 있었다
+
+나중에 무선 네트워크 보안쪽을 더 많이 공부하게 된다면 `tplink`공유기라도 하나 사둬야 겠다
+
+#### 실습
+
+![Screenshot from 2024-09-01 00-52-25](https://github.com/user-attachments/assets/f8a26fda-f3cc-47c3-90dc-cb0779b77528)
+
+채널 6번에 있는 타겟의 네트워크를 캡쳐하며 `wpa_handshake`라는 이름으로 캡쳐한 패킷을 저장한다
+
+실행 후 만약 핸드셰이크가 캡쳐 되었다면 `airodump-ng`에서 `WPA handshake`라며 알려줄 것이다
+
+하지만 누군가 연결할 때까지 기다리는 것도 오래 걸리고 직접 한번씩 연결하자니 그것도 오래 걸린다
+
+그렇기에 저번에 해봤던 `deauth(인증 해제 공격)`을 통해 자동으로 핸드셰이크를 만들어내자
+
+![Screenshot from 2024-09-01 01-00-27](https://github.com/user-attachments/assets/90c96bc9-68ea-4187-b0fd-5f06f265ce6e)
+
+참고로 여기서 아래 연결되어있는 것은 내 핸드폰이다
+
+![Screenshot from 2024-09-01 01-02-05](https://github.com/user-attachments/assets/e55fa659-7d5c-4ed1-9f34-5caf3713d7c1)
+
+공격을 하고 나면 핸드셰이크를 캡쳐했다는 문구가 보인다
+
+### 7-4. Word List 만들기
+
+위에서 우리는 핸드셰이크 패킷을 캡쳐했었다
+
+이번에는 이 패킷을 이용할 것인데 사실 패킷 자체로써는 `WPA 키`를 얻거나 계산하는 데에는 도움이 되진 않고 이것을 이용해서 비밀번호가 맞는지 틀리는지를 판단할 때 사용된다
+
+그러면 어떤 비밀번호가 맞는지 판단을 위해`Word List(사전 파일)`를 통해 `brute force`를 해야한다
+
+사전 파일에 담긴 비밀번호를 하나씩 핸드셰이크 정보와 함께 비교하며 비밀번호가 맞는지 틀리는지를 확인하는 것이다
+
+이런 사전 파일은 인터넷에 실제 사용된 비밀번호를 통계로 정리된 것들도 있으니 사용할 수 있다
+
+하지만 여기서는 사전파일을 직접 만들어보기로 할 것이다
+
+강의에서는 `crunch`를 사용했다
+
+> crunch [min글자수][max글자수][비밀번호에 사용될 문자들] -t [pattern] -o [filename]
+
+이런 식으로 쓰이게 된다
+
+![Screenshot from 2024-09-01 01-13-18](https://github.com/user-attachments/assets/074998c8-24b3-4c3d-be9f-86683d1d8fa4)
+
+그리고 누르는 순간 뭔가 잘못되었다는 것을 알았다 112GB라뇨 선생님 이건 아니잖아요
+
+라고 하기에는 조합이 길어서 그럴만 해...
+
+일단은 그냥 강의를 따라가자
+
+![Screenshot from 2024-09-01 01-15-14](https://github.com/user-attachments/assets/fcc3ffb8-1385-4853-85cf-918f0e3bb521)
+
+그래 이게 맞지 4MB
+
+하지만 이 목록에는 내가 설정한 핫스팟 비밀번호인 `testpwd0123`이 없기에 직접 한줄 추가해주자
+
+```bash
+root@kali:~# sed -i "$(( $(wc -l < test.txt) / 2 ))i testpwd0123" test.txt
+```
+
+![Screenshot from 2024-09-01 01-20-11](https://github.com/user-attachments/assets/7b482c71-dad1-493f-9fde-a5c3739e6217)
+
+잘 들어가 있다
+
+### 7-5. 워드리스트 공격을 이용해 WPA 및 WPA2 해킹하기
+
+`aircrack-ng`를 이용하면 핸드셰이크 패킷에서 필요한 정보를 추출할 수 있다
+
+그 내용 중에는 `MIC (Message Intergrity Code)`가 있는데 이것은 바로 `AP`가 비밀번호가 유효한지 아닌지 확인할 때 사용하는 값이다
+
+그리고 우리는 그 외의 모든 다른 정보와 위에서 만든 `사전 파일(Word List)`를 조합해서 `MIC`를 생성해낸다
+
+그리고 이 `MIC`가 핸드셰이크 패킷에 존재하던 `MIC`와 동일하다면 그 때 사용된 단어가 바로 네트워크의 비밀번호인 셈이 된다
+
+![image](https://github.com/user-attachments/assets/06a83bd0-aa20-494b-879c-cb5f17549f69)
+
+설명을 돕기 위해 사진을 가져왔다, 문제시 삭제할 것이다
+
+하지만 만약에 사전 파일에 맞는 비밀번호가 없다면? 당연히 실패하게 된다 
+
+![Screenshot from 2024-09-01 01-32-25](https://github.com/user-attachments/assets/9fa2fd59-d758-4d22-9a7d-c4dafd56e024)
+
+`aircrack-ng [캡쳐한 패킷.cap] -w [사전파일]`
+
+사용해보면?
+
+![Screenshot from 2024-09-01 01-33-22](https://github.com/user-attachments/assets/6768fd72-2122-40c2-9bda-f06359d36fd0)
+
+이런식으로 조합해서 맞는 비밀번호를 찾기 시작한다
+
+![Screenshot from 2024-09-01 01-34-54](https://github.com/user-attachments/assets/ef97a9bb-2d51-460a-9dd7-eca0ad045007)
+
+그리고 발견했다면 `KEY FOUND!`라며 맞는 암호를 알려준다
+
+성공!
+
+이제 다음으로 넘어가자
+
+## 8. 네트워크 해킹 - 액세스 획득 - 보안
+
+### 8-1. 해커로부터 네트워크 보호하기
+
+이 부분은 글로 되어있다
+
+일단 결론 부분만 이야기 하자면
+
+1. WEP 암호화는 패스워드의 복잡성과 상관없이 네트워크에 연결하지 않고도 풀 수 있으니 사용하지 말자
+2. WPA2는 사전파일을 통한 기법을 사용하므로 비밀번호를 어렵게 설정하자
+3. WPS기능에 무차별 대입법을 통해 WPA2의 키를 알아낼 수 있으니 비활성화 해놓자
+
+라는 이야기이다
+
+### 8-2. 무선 설정 구성하여 보안 극대화하기
+
+지금까지는 공격하는 방법에 대해 알아봤으니 이번 영상에서는 네트워크 설정을 통해 보안을 강화하는 방법에 대해 알려준다
+
+여기서는 라우터 마다 설정방법이나 설정 가능한 기능이 다들 다르기 때문에 굳이 설명하지 않겠다
+
+8-1에서 설명한 것들을 라우터에 설정하는 과정이다
+
+## 9. 네트워크 해킹 - 연결 후 공격
+
+이제부터는 네트워크에 접속한 후에 할 수 있는 공격에 관해 알아볼 차례이다
+
+타겟이 와이파이이 혹은 이더넷 네트워크든 상관 없이 네트워크에 접속 할 수만 있다면 이제부터 할 강의 내용을 따라갈 수 있을 것이다
+
+일단 네트워크에 접속하게 되면 같은 네트워크에 접속한 모든 클라이언트의 `세부 정보를 수집` 할 수도 있고 `데이터를 중간에 가로체` 인터넷에서 사용하는 모든 정보(비밀번호, 접속목록 등)을 볼 수 있다
+
+심지어 무선 네트워크라면 전송되는 데이터를 변경하여 악성 코드를 주입할 수도 있다
+
+이를 위해 VM에서 `windows`와 `kali`를 서로 연결해 연습할 수도 있고 실제 wifi와 실제 컴퓨터를 대상으로 연습할 수도 있다
+
+강의에서는 두 방법 모두 연습해 본다고 한다
+
+## 10. 네트워크 해킹 - 연결 후 공격 - 정보 수집
+
+### 10-1. Windows 가상 컴퓨터를 설치하는 방법
+
+타겟이 될 windows10을 vm에 설치하는 과정입니다
+
+### 10-2. 애플 실리콘에 가상 머신으로 윈도우 설치하기
+
+하지만 나는 윈도우나 리눅스죠?
+
+### 10-3. 같은 네트워크에 연결된 기기를 확인하는 방법
