--- a/_posts/2024-09-01-Udemy-화이트-해킹-101-윤리적-해킹-기초부터-배우기.md
+++ b/_posts/2024-09-01-Udemy-화이트-해킹-101-윤리적-해킹-기초부터-배우기.md
@@ -1445,3 +1445,251 @@ netdiscover -r [아이피 범위]
 그리고 그 정보를 토대로 맥 테이블을 업데이트 해버린다
 
 그러면 이제 `hacker`는 `AP`에서 오는 정보를 `Victim`에게 넘겨주며 그 정보를 읽을 수 있고 또한 `Victim`에서 `AP`로 가는 정보를 넘겨주며 또한 정보를 읽거나 입맛대로 조정할 수 있게 된다
+
+### 11-2. 네트워크 트래픽 가로채기
+
+[Learn Python & Ethical Hacking From Scratch1](https://www.udemy.com/course/learn-python-and-ethical-hacking-from-scratch/?couponCode=OF83024D)에서 ARP 스푸핑 툴을 직접 만들어 보기도 했다고 한다
+
+나중에 한번 추가적으로 들어볼지도?
+
+이번 강의에서는 툴을 만들지는 않고 [Bettercap](https://www.bettercap.org/)이라는 툴을 사용할 것이다 (11-3 부터)
+
+이 툴을 이용해서 데이터의 흐름을 변경하거나 데이터가 공격자의 컴퓨터를 통해서만 흐르도록 조정할 수도 있다
+
+그 후 `wireshark`와 같은 툴을 통해 데이터를 분석하는 작업을 한다
+
+사용법은 매우 간단하다
+
+```
+arpspoof -i [네트워크 장치] -t [클라이언트 IP] [게이트웨이 IP]
+```
+
+![Screenshot from 2024-09-18 08-29-40](https://github.com/user-attachments/assets/84aa7414-90f5-4816-b55a-43b225c55d59)
+
+![image](https://github.com/user-attachments/assets/31f1e3e5-204a-4d57-ad38-f4bf57e39fb3)
+
+현재 내 가상 윈도우의 IP는 `192.168.12.130` 게이트웨이는 `192.168.12.2` 칼리 머신의 IP는 `192.168.12.129`으로 설정되어있다
+
+![Screenshot from 2024-09-18 08-35-11](https://github.com/user-attachments/assets/ea5fc9ba-5ad7-4960-80b7-8d47af2b412c)
+
+```sh
+root@kali:~# arpspoof -i eth0 -t 192.168.12.130 192.168.12.2
+```
+으로 게이트웨이에게 내가 윈도우 가상머신이라고 알려주고
+
+```sh
+root@kali:~# arpspoof -i eth0 -t 192.168.12.2 192.168.12.130
+```
+
+동시에 윈도우 가상머신에게는 내가 게이트웨이라고 알려주게 된다
+
+처음에는 피해자(윈도우)를 속이는 것이고 두번째에는 라우터(게이트웨이)를 속이는 것이다
+
+![Screenshot from 2024-09-18 08-39-15](https://github.com/user-attachments/assets/00763f8d-0be0-4ece-b8d9-a41737735d3a)
+
+이제 실행하게 되면 피해자(윈도우)에서의 맥 테이블이 바뀐 것을 볼 수 있다
+
+![image](https://github.com/user-attachments/assets/c8dd6b38-b531-4249-9429-06f945ae92a1)
+
+처음 두 줄을 보게 되면 분명 공격자 `.2`와 라우터 `.129`의 맥 주소가 달랐지만 arp공격을 한 후에는 라우터의 맥 주소가 공격자와 같아진 것을 알 수 있다
+
+만약 이 상태에서 윈도우가 인터넷에 접속하려고 한다면 공격자(칼리)는 라우터가 아니기 때문에 요청을 받게되면 흐름을 막게되고 라우터로 요청을 흘려보내게 된다
+
+이를 해결하기 위해 칼리에서 포트포워딩을 통해 마치 라우터처럼 패킷이 통과할 수 있도록 설정해줘야 한다
+
+```
+root@kali:~# echo 1 > /proc/sys/net/ipv4/ip_forward
+```
+
+명령어를 통해 포트포워딩을 허락해 줄 수 있다
+
+![Screenshot from 2024-09-18 08-47-05](https://github.com/user-attachments/assets/812b278e-9d12-4481-a342-7b130a801c07)
+
+### 11-3. Bettercap 기본 지식
+
+> 네트워크 공격을 수행하기 위한 프레임워크
+
+- arp spoof 공격을 통해 패킷의 흐름을 변경할 수 있음
+- 데이터 스니핑 가능
+- HTTPS 우회
+- 도메인 리다이렉트(DNS spoofing)
+- 코드 삽입 밑 페이지 로드
+- 등등
+
+```
+bettercap -iface [interface]
+```
+
+![Screenshot from 2024-09-18 22-36-16](https://github.com/user-attachments/assets/29d64902-2f55-41cc-9a0c-555dfe0fbeba)
+
+위와 같이 bettercap에 접속할 수 있다
+
+![Screenshot from 2024-09-18 22-37-51](https://github.com/user-attachments/assets/9251e2da-0108-4a63-8754-26dd6cc8db65)
+
+`help` 명령어로 후리가 사용할 수 있는 명령어와 모듈을 볼 수 있다
+
+현재로써는 `events.strem`모듈만 활성화가 되어있는데 이 모듈은 다른 모든 이벤트를 처리하기 위해 백그라운드에서 실행되고 있는 모듈이다
+
+특정 모듈에 관한 설명을 보고 싶다면 `help 모듈이름`으로 찾아볼 수 있다
+
+이번 강의에서는 `net.probe`와 `net.recon`을 사용할 것인데 사용법을 모르기에 `help net.probe`을 해보자
+
+![Screenshot from 2024-09-18 22-41-57](https://github.com/user-attachments/assets/eef8266a-8f09-42fc-9b95-21b9bd428646)
+
+- net.probe (작동 중지): 계속해서 UDP 패킷을 보내 동일한 네트워크에 있는 기기를 확인
+- net.probe on : 모듈 켜기
+- net.probe off : 모듈 끄기
+
+> 파라미터
+
+|파라미터|설명|기본값|
+|:---:|:---:|:---:|
+|net.probe.mdns|mDNS(Multi-cast Domain Name Service) 켜기/끄기|true|
+|net.probe.nbns|NetBIOS(Network BIOS) 이름 검색 서비스 찾기 켜기/끄기|true|
+|net.probe.throttle|0보다 큰 경우 프로브 패킷은 이 값에 의해 밀리초 단위로 조절|10|
+|net.probe.upnp|UPNP(Universal Plug and Play)찾기 켜기/끄기|true|
+|net.probe.wsd|WSD(Web Services for Devices)찾기 켜기/끄기|true|
+
+#### mDNS?
+
+> Multi-cast Domain Name Service
+
+UDP 멀티캐스트 기반으로 LAN상에 있는 어떤 호스트 또는 Host의 IP를 찾기 위해 만들어진 프로토콜이다
+
+예를들어 LAN상에 있는 프린터를 검색해서 사용할 수 있는 것
+
+#### NetBIOS?
+
+> Network BIOS
+
+[NetBIOS](https://jin-network.tistory.com/35)
+
+쉽게 말해 로컬 네트워크에서 컴퓨터 이름을 알기 위해 사용된다는 의미인건가?
+
+IP주소 대신에 컴퓨터 이름(NetBIOS 이름)을 통해 통신을 하게 될 때 사용된다
+
+#### UPnP?
+
+> Universal Plug and Play
+
+[UPnP란 무엇이고, 왜 당장 비활성화해야 하나요?](https://nordvpn.com/ko/blog/upnp-igd/?srsltid=AfmBOoo2fdJoa457AlUxEBEotl_g8-QHi4p2c0lusAs0gyQGbZmrrNT4)
+
+별도의 포트포워딩 설정 없이 프로그램을 사용할 수 있도록 자동으로 포트를 구성하는 기능
+
+UPnP를 사용하게 되면 WAN에서 LAN을 검색할 수 있게 되어 취약해진다고 한다
+
+#### WSD?
+
+> Web Services for Devices
+
+[WSD; Web Services for Devices Printer Port](https://pribijou.tistory.com/9)
+
+[Web_Services_for_Devices](https://en.wikipedia.org/wiki/Web_Services_for_Devices)
+
+[Web Services for Devices (WSD)-xerox](https://www.xerox.com/technical_product_documentation/Versant_180_280_Press/SAG/en_EN/Xerox/index.html#page/Xerox/0000640871.html)
+
+기기를 자동으로 검색하여 설정 및 제어를 하는 프로토콜
+
+Microsoft에서 제공하는 기술로, 네트워크로 연결된 장치를 검색하고 사용하기 위한 표준 방법
+
+이라는 검색 결과가 자주 보인다
+
+주로 프린터기에 자주 사용되는 기능인듯 하다
+
+![Screenshot from 2024-09-18 23-08-17](https://github.com/user-attachments/assets/c552f622-25bf-4554-9bf8-2e5940c8cdda)
+
+이제 `net.probe` 모듈을 실행시켜보면 위와 같은 결과가 나온다
+
+켜는 순간 네트워크에 연결되어있는 클라이언트들을 자동으로 탐색하기 시작한다
+
+![Screenshot from 2024-09-18 23-12-57](https://github.com/user-attachments/assets/6d945cc7-3966-4a68-b101-a27684b67a68)
+
+윈도우 가상 머신을 켜고 확인해보면 `192.168.130`인 윈도우 가상머신과 `192.168.12.1`, `192.168.12.254`의 게이트웨이가 잡히는 것을 볼 수 있다
+
+또한 맨 윗줄을 보면 `net.probe starting net.recon as a requirement for net.probe`이라고 하는데 `net.probe`을 켜기 위해서는 `net.recon`을 켜게 된다
+
+![Screenshot from 2024-09-18 23-16-41](https://github.com/user-attachments/assets/35afb05f-ac7e-46a8-a248-0cd37ff7eca5)
+
+다시 `help`명령어로 확인해보면 `net.probe`과 `net.recon`이 켜져있는 것을 볼 수 있다
+
+이는 `net.probe`이 모든 가능한 IP에 탐색 요청을 전송하고 다시 답장이 오게 되면 `net.recon`이 ARP 캐시를 모니터링해서 응답을 탐지해야하기 때문이다
+
+그리고 탐지된 모든 IP를 리스트로 만들어서 공격을 수행할 수 있게 해준다
+
+![Screenshot from 2024-09-18 23-20-13](https://github.com/user-attachments/assets/920301e9-6352-4606-99be-0e6aa45a54f9)
+
+이제 `net.show`를 통해 연결된 클라이언트를 모두 볼 수 있다 (위에서 만들어진 리스트)
+
+##### Workgroup?
+
+[[Active Directory] WORKGROUP VS Domain](https://jin-network.tistory.com/86)
+
+컴퓨터 네트워킹에서 작업 그룹은 공통 리소스와 책임을 공유하는 LAN에 연결된 컴퓨터 모음
+
+### 11-4. Bettercap을 이용한 ARP 스푸핑
+
+MITM 공격을 하기에 앞서 우리는 `arp.spoof`라는 모듈을 사용할 것이다
+
+![Screenshot from 2024-09-18 23-26-58](https://github.com/user-attachments/assets/6910d623-3468-4b76-b97e-06cece90a7cf)
+
+- arp.spoof (작동 중지): 선택한 네트워크를 spoofing한다
+- arp.spoof on : ARP spoofer 시작
+- arp.ban on : ARP spoofer를 ban모드로 실행 (타겟과의 연결 종료)
+- arp.spoof off : ARP spoofer 종료
+- arp.ban off : ARP ban모드 종료
+
+|파라미터|설명|기본값|
+|:---:|:---:|:---:|
+|arp.spoof.fullduplex|true면 타겟과 게이트웨이가 모두 공격당하고, 그렇지 않으면 타겟만 공격됩니다(라우터에 ARP 스푸핑 방지 기능이 있는 경우 공격이 실패)|false|
+|arp.spoof.internal|true면 네트워크 컴퓨터 간의 로컬 연결이 스푸핑되고, 그렇지 않으면 외부 네트워크와 주고받은 연결만 스푸핑된다|false|
+|arp.spoof.skip_restore|true로 설정하면 스푸핑이 중지된 경우 대상 arp 캐시가 복원되지 않는다|false|
+|arp.spoof.targets|쉼표로 IP주소들을 나열할 수 있고 MAC주소나 스푸핑할 주소 또는 nmap스타일의 IP주소 나열법을 쓸 수도 있다|default=<entire subnet>|
+|arp.spoof.whitelist|위와 동일하나 이번에는 스푸핑을 생략할 IP등의 리스트이다|NULL|
+
+파라미터 설정을 위해서는 `set 파라미터 바꿀값`으로 변경할 수 있다
+
+![Screenshot from 2024-09-18 23-38-23](https://github.com/user-attachments/assets/192e26b5-0a48-4d16-a767-51bd4684832f)
+
+여기서는 `fullduplex`값을 true로 변경하여 타겟과 라우터 모두를 속이도록 설정하였다
+
+![Screenshot from 2024-09-18 23-40-12](https://github.com/user-attachments/assets/e5e66503-83ab-4ee4-a313-5db65a780f48)
+
+또한 타겟을 가상 윈도우 IP로 설정하였다
+
+오류가 안뜬다면 성공
+
+모듈을 실행시키기 위해서는 `arp.spoof on`을 사용할 수 있다
+
+![Screenshot from 2024-09-18 23-41-59](https://github.com/user-attachments/assets/bd674061-4c23-451b-a3b9-6eb9b8a4065a)
+
+실행 후 window로 가서 확인해보자
+
+![image](https://github.com/user-attachments/assets/79dc7aad-96d3-4b3f-904e-d3aecc2df94d)
+
+게이트웨이의 MAC주소와 칼리 머신의 MAC주소가 동일한 것을 알 수 있다
+
+원래 `fullduplex`의 값을 `false`로 냅둔다면 라우터에서는 타겟의 MAC주소는 변함없었을 것이다 하지만 우리가 `true`로 설정함으로써 타겟의 MAC 주소가 공격자의 주소로 변경되었을 것이다
+
+### 11-5. 네트워크 기기 염탐하기(패스워드, 방문한 웹사이트 등을 확인하는 방법)
+
+캡쳐한 데이터들을 보기 위해서 `net.sniff`모듈을 사용할 것이다
+
+이번에는 모듈의 파라미터 설명은 넘어가겠다
+
+![Screenshot from 2024-09-18 23-52-17](https://github.com/user-attachments/assets/79bcd66d-12f7-46d8-a8d8-5abc00d64a3d)
+
+Bettercap으로 https를 캡쳐하는 것은 의미가 없으니 `vulweb.com`에 접속하자
+
+![image](https://github.com/user-attachments/assets/a6acb761-4b21-47cb-a0bc-2baf8bcce034)
+
+![Screenshot from 2024-09-18 23-55-43](https://github.com/user-attachments/assets/fcf38594-baed-463a-af0d-08cd5d250777)
+
+칼리 머신에서는 현재 중간자로 있기에 지나가는 모든 패킷을 확인할 수 있다
+
+![image](https://github.com/user-attachments/assets/fba03f62-64c3-452c-bee1-139448cbe63d)
+
+윈도우에서 한번 id `test` pwd `test`로 로그인해보자
+
+![Screenshot from 2024-09-18 23-57-58](https://github.com/user-attachments/assets/d3f23fef-b175-476b-a340-47d7bc91b005)
+
+조금만 올려보면 바로 우리가 입력한 아이디와 비밀번호를 볼 수 있다
