--- a/_posts/2024-09-28-FIESTA-훑어보기.md
+++ b/_posts/2024-09-28-FIESTA-훑어보기.md
@@ -2,7 +2,7 @@
 title: "[FIESTA 2024] 금융보안 위협분석 대회 PlayZone문제"
 date: 2024-09-28 16:19:15 +09:00
 categories: [Linux, 보안, 해킹, CTF]
-tags: [FIESTA 2024, playzone]
+tags: [FIESTA 2024]
 pin: true
 ---
 
