FIESTA 2024 이제 문제를 봐서 풀기는 실패

--- a/_posts/2024-09-28-FIESTA-훑어보기.md
+++ b/_posts/2024-09-28-FIESTA-훑어보기.md
@@ -596,3 +596,9 @@ else:
 정답은 `fiesta{c4f3024e7ffc971df554aa0054e28926}`
 
 와... 일단 오늘은 여기까지... 머리가... 9/28
+
+## CHALLENGE
+
+는 일이있어 까먹고 있다가 1시간 남기고 떠올라서.. 다음 회차에는 공부하고 도전해 보는걸로
+
+이번에는 플레이존이라도 도전해 봤으니 다행이랄까?
