일단 수업은 끝
1

--- a/_posts/2024-10-09-kisa-2024년-버그헌팅-실습훈련-스타트업-연계과정-7차.md
+++ b/_posts/2024-10-09-kisa-2024년-버그헌팅-실습훈련-스타트업-연계과정-7차.md
@@ -60,3 +60,85 @@ pin: true
 왜냐면 마지막으로 검사한 저번주 일요일 이후에는 집에서 5시 30분에 일어나서 7시 20분에 출발해서 9시 50분에 도착하고 수업 끝나면 6시에 집 도착하면 밖에서 밥을 먹고 오기에 3시간 걸려서 10시에 도착하기에... 컴터를 킬 일이 없었다
 
 근데 이번에 잠깐 켜서 돌리니까 이러네 아놔
+
+#### 문제 발생 5
+
+![image](https://github.com/user-attachments/assets/d5397ff4-a21f-4cb2-9014-51b62204c160)
+
+어... waydroid가 설치되다가 갑자기 멈췄다. 좀 더 두고본 뒤에도 계속 이러면 껏다가 다시 켜야할 듯 하다.
+
+#### 문제 해결 5
+
+일단 waydroid는 설치가 되었는데 오류로 인해 창이 멈춘 것이였다 그냥 끄면 됨
+
+그런데 문제가 `waydroid`는 `wayland`를 위해 만들어졌지 `x11`(내 환경)을 위해 만들어진 것이 아니기에 어떻게 해결할까 찾던중 다음 유튜브 영상을 발견하였다
+
+[Waydroid With ARM Support On X11: A Proper Guide (2023)!](https://www.youtube.com/watch?v=tJ-Mna_zi0o)
+
+![image](https://github.com/user-attachments/assets/38a54a75-0d02-4edf-92ec-f344023da6a6)
+
+그는 신이야!
+
+시작할 때에는 `waydroid show-full-ui` 끝날 때에는 `waydriod session stop`
+
+기억하기 어려울 거 같아서 그냥 스크립트로 만들었다
+
+```bash
+#!/bin/bash
+
+if [ "$(whoami)" != "root" ]; then
+    echo "sudo 권한이 아닙니다. 스크립트를 종료합니다."
+    exit 1
+fi
+
+echo "Waydroid 커맨드 모음"
+echo -e "1. waydroid 시작\n2. waydroid 종료\n3. waydroid firewall allow\n4. waydroid firewall disallow\n"
+echo -n "입력 : "
+read INPUT
+
+if [ "$INPUT" == "1" ]; then
+    echo "Waydroid 시작 명령어 - 왜인지 스크립트 상으로 실행이불가능해서 따로 올림
+
+export WAYLAND_DISPLAY=mysocket
+weston --socket=$WAYLAND_DISPLAY --backend=x11-backend.so --width=486 --height=1000 &
+waydroid show-full-ui &
+    "
+    export WAYLAND_DISPLAY=mysocket
+    weston --socket=$WAYLAND_DISPLAY --backend=x11-backend.so --width=486 --height=1000 &
+    #waydroid show-full-ui &
+elif [ "$INPUT" == "2" ]; then
+    waydroid session stop
+elif [ "$INPUT" == "3" ]; then
+    echo "방화벽을 여는 중입니다. 잠시만 기다려 주세요"
+    sudo ufw default allow FORWARD
+    sudo ufw allow 53
+    sudo ufw allow 67
+elif [ "$INPUT" == "4" ]; then
+    echo "방화벽을 닫는 중입니다. 잠시만 기다려 주세요"
+    sudo ufw default deny FORWARD
+    sudo ufw deny 53
+    sudo ufw deny 67
+else
+    echo "잘못된 입력입니다"
+fi
+```
+
+그런데 일단은 시작 부분에 문제가 있어서 좀 더 봐야할 코드다
+
+일단 안드로이드 설치하고 `magisk`까지 설치하는데에는 성공했다!
+
+#### 문제 해결 6 - 10/10
+
+`weston`에서 `waydroid`를 통해 `android11`을 설치했었는데 분명 `magisk`의 `Zygisk`가 무슨 짓을 하던 안되었었는데
+
+놀랍게도 `APP update`를 하고 나서 magisk를 다시 설치했더니 `installed`부분이 없어져서 다시 파이썬 스크립트로 설치했더니
+
+`Zygisk`가 살아났다?? 재실행을 그렇게 해도 안되더니 아놔 너무 기분이 좋다!!!!!!!!!!!
+
+![image](https://github.com/user-attachments/assets/38ce8b5c-8400-41a7-b184-b814f0529c2b)
+
+#### 문제 발생 7 - 마이크로소프트 계정 해킹
+
+![image](https://github.com/user-attachments/assets/af584d6d-7e8b-4470-aaa2-bf50abc4a2b4)
+
+어이가 없네 9월 10일날 부터 오늘까지 계속 시도하고 있네 뭐하는 놈들인지...
