--- a/_posts/2024-10-09-kisa-2024년-버그헌팅-실습훈련-스타트업-연계과정-7차.md
+++ b/_posts/2024-10-09-kisa-2024년-버그헌팅-실습훈련-스타트업-연계과정-7차.md
@@ -142,3 +142,23 @@ fi
 ![image](https://github.com/user-attachments/assets/af584d6d-7e8b-4470-aaa2-bf50abc4a2b4)
 
 어이가 없네 9월 10일날 부터 오늘까지 계속 시도하고 있네 뭐하는 놈들인지...
+
+#### 문제 발생 8 - Zygisk 우회 실패
+
+음.. 결국 `Zygisk`가 설치 되었다고 떴지만 실제로는 실행되지 않았다. 다르게 말하면 module에서는 로딩조차 되지 않았다. 파일을 로딩하는데 문제가 있는걸까?
+
+고로 누군가 `waydroid`에서 `zygisk`를 실행할 수 있게 만들어주기 전까지는 윈도우 환경에서 `LDplayer`를 써야겠다
+
+또한 나중에 친구를 통해 확인해보니 내가 깔았던 `LDplayer9`설치 폴더에는 분명 바이러스가 있었지만 내 친구가 보내준 설치파일에는 바이러스가 감지되지 않았다... 이게 무슨?
+
+## 버그헌팅 실습훈련이 끝난 후 기록하는 수업 내용들
+
+2일 전 버그헌팅 실습 훈련이 끝이 났고 이제 그동안 들었던 수업 내용을 정리해보자
+
+### 1일차 2024-10-07
+
+### 2일차 2024-10-08
+
+### 3일차 2024-10-09
+
+### 4일차 2024-10-10
