bandit pin 삭제 및 버그헌팅 실습훈련 1일차 끝

--- a/_posts/2024-10-09-kisa-2024년-버그헌팅-실습훈련-스타트업-연계과정-7차.md
+++ b/_posts/2024-10-09-kisa-2024년-버그헌팅-실습훈련-스타트업-연계과정-7차.md
@@ -10,23 +10,23 @@ pin: true
 
 일단 수업 내용이나 그 외 이야기들은 이번 주 수업이 끝난 뒤에 기록하겠다
 
-## Findthegap 버그바운티 실습 (수요일)
+## Findthegap 버그바운티 실습 준비(수요일)
 
 타겟 : ZUICY - 쥬시 AI
 
-`해당 프로그램의 이미지, 문자, 수치 등 모든 정보를 타인에게 유출하는 행위가 엄격히 금지되며, 유출 시 법적 책임을 질 수 있습니다.`이고 또한 처음에 버그바운티를 하기 전 계약서에서 블로그에 올리는 것도 금지되어있다고 하였기에 그 과정은 나만 소장하기로 하였다
+`해당 프로그램의 이미지, 문자, 수치 등 모든 정보를 타인에게 유출하는 행위가 엄격히 금지되며, 유출 시 법적 책임을 질 수 있습니다.`이고 또한 처음에 버그바운티를 하기 전 계약서에서 과정을 블로그에 올리는 것도 금지되어있다고 하였기에 나만 소장하기로 하였다
 
-### 준비과정
+우리 팀은 결국 팀명대로 `onlyone` 딱 하나의 취약점을 제출 할 수 있었다
 
 버그 바운팅을 위해 `Finthergap`에서 말하는 주의사항과 `openvpn`을 통한 vpn 설정 및 `burpsuit` 설정 파일을 다운받아 설정했다
 
-#### 문제 발생 1
+### 문제 발생 1
 
 어... web 해킹일거라고 생각했는데 앱 해킹이다
 
 뭐 일단은 수업 때 세팅 방법을 배웠으니까 그대로 따라해 보자
 
-#### 문제 발생 2
+### 문제 발생 2
 
 ![바이러스 감지](https://github.com/user-attachments/assets/83cbf376-d455-46f6-8f55-02a1bdd4c1b9)
 
@@ -39,7 +39,7 @@ pin: true
 
 결국에는 다시 처음으로...
 
-#### 문제 발생 3
+### 문제 발생 3
 
 이건 에뮬레이터 문제는 아니고 일단 내가 사용하는 `삼성 갤럭시 3` 노트북은 `VT`를 활성화 할 수 없었다
 
@@ -49,7 +49,7 @@ pin: true
 
 오늘 한번 시도해 보려고 했는데 `19시 49분`인 지금까지 세팅도 불가능 했다. 역시 세팅이 반인가....
 
-#### 문제 발생 4
+### 문제 발생 4
 
 밥 먹기 전에 혹시 몰라서 바이러스 검사 돌려놨는데... 아니 뭔 일인데 이거
 
@@ -61,13 +61,13 @@ pin: true
 
 근데 이번에 잠깐 켜서 돌리니까 이러네 아놔
 
-#### 문제 발생 5
+### 문제 발생 5
 
 ![image](https://github.com/user-attachments/assets/d5397ff4-a21f-4cb2-9014-51b62204c160)
 
 어... waydroid가 설치되다가 갑자기 멈췄다. 좀 더 두고본 뒤에도 계속 이러면 껏다가 다시 켜야할 듯 하다.
 
-#### 문제 해결 5
+### 문제 해결 5
 
 일단 waydroid는 설치가 되었는데 오류로 인해 창이 멈춘 것이였다 그냥 끄면 됨
 
@@ -127,7 +127,7 @@ fi
 
 일단 안드로이드 설치하고 `magisk`까지 설치하는데에는 성공했다!
 
-#### 문제 해결 6 - 10/10
+### 문제 해결 6 - 10/10
 
 `weston`에서 `waydroid`를 통해 `android11`을 설치했었는데 분명 `magisk`의 `Zygisk`가 무슨 짓을 하던 안되었었는데
 
@@ -137,13 +137,13 @@ fi
 
 ![image](https://github.com/user-attachments/assets/38ce8b5c-8400-41a7-b184-b814f0529c2b)
 
-#### 문제 발생 7 - 마이크로소프트 계정 해킹
+### 문제 발생 7 - 마이크로소프트 계정 해킹
 
 ![image](https://github.com/user-attachments/assets/af584d6d-7e8b-4470-aaa2-bf50abc4a2b4)
 
 어이가 없네 9월 10일날 부터 오늘까지 계속 시도하고 있네 뭐하는 놈들인지...
 
-#### 문제 발생 8 - Zygisk 우회 실패
+### 문제 발생 8 - Zygisk 우회 실패
 
 음.. 결국 `Zygisk`가 설치 되었다고 떴지만 실제로는 실행되지 않았다. 다르게 말하면 module에서는 로딩조차 되지 않았다. 파일을 로딩하는데 문제가 있는걸까?
 
@@ -155,10 +155,251 @@ fi
 
 2일 전 버그헌팅 실습 훈련이 끝이 났고 이제 그동안 들었던 수업 내용을 정리해보자
 
+![image](https://github.com/user-attachments/assets/fd998639-af58-4957-a575-27c32ba7612e)
+
+핸드폰 녹화 25개, 44.3GB
+
+![image](https://github.com/user-attachments/assets/8832efda-b64c-4278-8337-249c88505f41)
+
+노트북 녹화 21개, 19.7GB
+
+다시 들으면서 복습이다
+
 ### 1일차 2024-10-07
+
+> 팀 빌딩, 버그 헌팅 알아보기, 몸 풀기
+
+첫 날은 각자 자기 소개 및 강사님 소개, 그리고 팀을 만들었다
+
+강사님이 [노말틱](https://www.youtube.com/@Normaltic)님이 강사님으로 있을 줄은 생각도 못했다. 일단 `Kisa Academy`에 나온 모든 강의를 신청하고 있었는데 이런 기회가!
+
+이번 수업은 버그바운티 실습으로 실제 [Findthegap](https://findthegap.co.kr/)에서 실제 서비스를 대상으로 버그바운티를 한는 것이다
+
+![카드](https://github.com/user-attachments/assets/ecaef980-8294-47c6-b3ed-6c886ca43eac)
+
+수업을 시작하고 나서는 간단한 카드를 하나 받았는데 본인이 받은 카드에 적힌 문구를 이해하고 옆 사람과 이야기를 나눠보는 것이였다
+
+위 사진은 우리 팀이 가져온 카드들 이였고 나는 그 중 `/normal.php?c=bHM=`이라는 카드를 가져가게 되었다
+
+솔직히 난 웹 해킹에 관해서는 공부해 본 적이 전무했기에 바로 인터넷을 찾아봤는데 아무리 봐도 저 `bHM=`이 무엇인지 감이 잡히지 않았다
+
+가만히 다른 사람들이 강사님을 불러서 본인이 생각한 정답을 이야기 하고 있을 때 어째 뭔가 어디서 본 듯한 문구라는 생각이 들었다
+
+그래서 바~로 `base64` 디코딩을 돌려보니 `ls` 명령어였던 것이다!
+
+해석해보자면 `/normal.php`라는 `php`파일에 `c`라는 변수가 있는데 이 변수를 통해 웹서버에서 명령어를 실행시킬 수 있는 것 같다
+
+그리고 뒤에 `base64`로 복호화된 `bHM=`은 `ls`명령어니 웹 서버에서 `ls`명령어로 파일 리스트를 불러오게되는 공격이다
+
+강사님께 내가 생각한 정답에 대해 확인해보니 맞았다!! 하지만 지금도 이게 무슨 공격인지는 모른다. 아마도 `chatgpt`에 의하면 `명령어 주입(Command Injection)` 혹은 `원격 코드 실행(RCE, Remote Code Execution)`이라고 한다
+
+
+
+#### 팀 빌딩
+
+팀은 앉아있는 순서대로 만들어졌고 총 3팀이 만들어졌다
+
+그리고 이제 팀 별로 방에 들어가서 팀원들이 가지고 있는 카드를 이용하여 공격 시나리오를 짜게 되었다. 아 물론 그 전에 먼저 서로에 대한 소개를 했다
+
+보아하니 온 사람 중 내가 막내였다. 다른 분들은 대부분 현업자였다. 올해 초에 했던 부트캠프 때에도 그렇고 확실히 휴학을 하면서 꽤나 알차게 시간을 쓰고 있다는 생각이 들었다. 매우 만족!
+
+![팀 소개](https://github.com/user-attachments/assets/4c37e45c-c7c8-4f1e-b51e-a111e1cca071)
+
+우리 팀은 `OnlyOne` 말 그대로 딱 하나만이라도 찾아내자! 라는 목표를 가지고 있다. 스포아닌 스포를 하자면 정말로 하나를 찾아냈다
+
+그리고 막내인 만큼 내가 발표 경험도 적고 하다보니 팀의 리더가 되었다. 이건 정말 생각도 못했지만 그래도 처음에는 아예 모르는 내용이여서 발표할 때 거의 내용을 외워서 했었다면 4회차가 되어서는 수요일이 휴일이라 그 때 찾아보기도 하고 그동안 같이 버그헌팅을 하면서 어느정도 어떻게 진행되는지 알게 되니 확실히 처음보다 훨씬 자신감이 생기고 발표 내용을 외우지 않더라도 사실상 숙지한 상태로 이야기 할 수 있었다. 내가 리더라니!
+
+#### 시나리오 생성
+
+![카드](https://github.com/user-attachments/assets/ecaef980-8294-47c6-b3ed-6c886ca43eac)
+
+일단 우리가 가지고 있는 카드들을 한번 다시 살펴보자
+
+> \<!--#exec cmd="ls" --> ​
+
+`Server-Side Include(SSI) 인젝션`공격이다. 서버가 `HTML`파일을 처리할 때 특정 명령어를 실행할 수 있도록 하는 기능인데 여기서 외부 입력(ls)을 통해 파일 목록을 출력할 수 있다
+
+물론 `ls`명령어 말고 다른 모든 명령어 실행이 가능하다. 아래 나올 취약점 모두 그러하다
+
+> ?message=<%25+system("cat+/etc/passwd")+%25> 
+
+`PHP 코드 인젝션` 또는 `Server-Side Template Injection(SSTI)`로 웹 서버에서 리눅스 시스템의 비밀번호가 담긴 `/etc/passwd`파일을 출력할 수 있다. 이를 통해 시스템 권한 탈취 또는 정보 유출로 이어질 수 있다
+
+> exractvalue('1',concat(0x3a,(select'test'))) ​
+
+`SQL 인젝션`으로 사용될 수 있는 쿼리 구문이다
+
+`extractvalue()`함수를 사용하여 `MySQL`에서 `XML`데이터에서 값을 추출한다
+
+그 안에 있는 `concat(0x3a, (select'test'))`구문에서는 `concat()`함수가 `0x3a`즉 `:`과 `test`를 합쳐서 `:test`라는 값을 반환하게 된다
+
+하지만 이 때 `1`은 `XML 데이터`로 주어졌고, `:test`는 `XPath 경로`로 사용되었다. 하지만 이 구문은 유효하지 않은 XPath 경로이기 때문에, MySQL은 오류를 발생시키게 되고 `오류 메세지`를 통해 원하는 값을 추출할 수 있게 된다
+
+> \{"$or": [{},{"foo":"1"}]} ​
+
+`MongoDB`에 쿼리를 조작하여 아무 조건 없는 쿼리를 추가하거나, `foo`값을 주입하려는 시도이다
+
+공격자가 비정상적인 값을 넣어 인증 우회, 데이터 유출 등의 공격을 시도할 수 있다
+
+> \/normal.php?c=bHM= ​
+
+내가 받은 카드로 위에서 설명하였다
+
+> get.php?addr=http://[::]:80/​
+
+`Server-Side Request Forgery(SSRF)`공격으로 공격자가 `IPv6(::)`주소로 외부 또는 내부 네트워크로 요청을 보내도록 하는 기법이다
+
+이 글을 쓰면서 영상 녹화된 것들을 계속 보고 있는데 정말 처음엔 너무 떨었나보다 ㅋㅋㅋ 내가 지금 들어도 긴장되는 목소리라니
+
+
+![시나리오](https://github.com/user-attachments/assets/715a07aa-fdbe-4669-9970-8475c37b71f7)
+
+우리의 시나리오는 다음과 같다
+
+1. 공격자가 `get.php?addr=http://[::]:80/`을 통해 서버에 웹쉘을 업로드 한다
+2. `ls`명령어를 실행시켜 웹쉘의 위치를 탐색한다
+3. 웹쉘을 실행시켜 DB를 공격한다
+
+사실 이미 서버에서 명령어를 실행시킬 수 있는 상황부터 다른 과정은 의미가 있을까 싶기는 하다
+
+그리고 또한 우리가 `1번`공격에 대해 완전히 잘못 이해하고 있어서 위 시나리오는 잘못된 것이라고 강사님이 말씀해 주셨다
+
+이런! 위에 내가 써놓은 코드에 관한 설명은 맞다. 시나리오가 틀린 것
+
+강사님께서 말씀하시길 `SSRF`공격은 `HTTP`요청을 하게 하여 그 결과를 저장하는 것이라고 하셨다. 우리가 생각한 웹쉘을 서버에 업로드 하는 것은 불가능!
+
+또한 시나리오를 만들 때에는 예를 들어 `우리가 공격할 대상은 ~~은행입니다. 그래서 ~~기능을 이용할 겁니다` 이런 식으로 시나리오를 만들면 더 좋다고 하셨다
+
+다른 팀원들 발표 자료와 내용은 가지고 있지만 고것은 허락을 받지 않았기에 블로그에는 쓰지 않겠다
+
+확실한건 다른 팀들도 진짜 잘 만들었다. 정말 저렇게만 하면 실제로 가능하겠는데? 싶을 정도였다
+
+#### 버그 헌팅에 관해 (수업 시작 전)
+
+수업을 시작하기 전에 다른 팀에서 `커맨드 인젝션(cat)을 통해 파일을 읽을 수 있는데 왜 http 다운로드를 또 해야하는가?`라는 질문이 있었는데 분명 `.txt`파일과 같은 읽을 수 있는 파일이라면 가능하지만 `바이너리`파일이라면 `cat`명령어를 써도 깨져서 보이기에 `http`다운로드를 통해 직접 받아서 보는 방법이 따로 있는 것이라고 하셨다
+
+또한 `만약에 http다운로드 취약점이 없다면 바이너리 파일은 열람할 수 없는 것인가?`라는 질문에는 만약 그럴 경우에는 `base64`인코딩을 통한 방법으로 파일을 텍스트 형태로 받은 후 복호화 한 뒤 리버싱 작업을 통해 볼 수 있다고 하셨다. 아니 이런 방법이?
+
+#### 버그 헌팅에 관해
+
+`Bug(취약점)`을 찾고 `Bounty(포상금)`을 받는 프로그램
+
+#### 버그바운팅은 왜 하는가?
+
+아예 취약점을 못 찾게 하면 해킹도 없지 않을까? 라고 생각할 수도 있지만 우리가 찾지 않는다고 해킹이 없을까? 전혀 아니다 오히려 그런 취약점들을 미리 찾아서 제거하는 것이 오히려 더 공격에 예방된다
+
+우리는 안전하게 만들기 위해! 버그헌팅을 하는 것이다
+
+#### 버그를 찾으면 포상금을 주는가?
+
+`버그` : 개발자, 프로그래머가 생각하지 못했던 상황이 터지는 것
+
+`취약점` : 그 버그 중 악용할 여지가 있는 것
+
+`버그(bug)`헌팅은 사실상 `취약점(vulnerability)`헌팅이지만 발음이 어려워서 그냥 버그헌팅 이라고 부른다고...
+
+우리는 버그를 찾는 것이 아니라 취약점을 찾는 것이다! 만약 우리가 취약점을 찾고 보고를 하려면 이 것이 어떻게 악용될 수 있을지 시나리오도 알려주는 것이 좋다
+
+#### 버그 헌팅의 조건
+
+취약점을 찾아서 해킹을 하면 돈을 준다? -> X
+
+서로 `합의(규칙)`가 된 상황에서만 취약점을 찾아야지 버그헌팅이다. 만약 그 밖으로 나가게 되면 그건 이제 `해킹`으로 변질된 것이다
+
+- 서비스의 가용성 - 실제 작동중인 서비스임으로 장애가 생기면 안된다
+
+#### 버그헌팅 플랫폼
+
+`Google`이나 `faceook`에서 처음으로 버그헌팅이 생겨났지만 대기업이 아닌 중소기업은 버그헌팅을 하는데 드는 비용을 전부 감당하기 힘들기에 그것을 위한 플랫폼인 `Find The Gap(한국)`, `Hackerone(외국)`,`bugcrowd(외국)`을 통해 버그헌팅을 시작할 수 있게 되었다
+
+하지만 아직 한국은 버그 바운팅이 그렇게 활발하지는 않다
+
+#### 버그 헌팅 / 모의해킹
+
+> 버그헌팅 : Crowd sourced Security Testing 불특정 다수가 참가할 수 있다
+
+장점
+
+- 공격에 활용될 수 있는 취약점들만 골라서 받을 수 있다. 또한 받는 입장에서 판단할 수 있다 - 위험할 수록 페이 UP
+
+단점
+
+- 정보를 공개해야 한다. 나쁜 해커도 참여할 수 있다
+
+> 모의해킹 : 선정된 인원만 참가할 수 있다
+
+장점
+
+- 정해진 인원이 참가하기에 악용될 여지가 적다. 버그헌팅에 비해 매우 안전하다
+
+단점
+
+- 인력의 수준에 따라 결과의 수준 차이가 크다
+- 정해진 기간 안에 취약점을 찾는다. 고로 못찾는 취약점이 존재할 수 있다
+- 정해진 취약점 항목에서만 취약점을 찾게 되기에 새로운 문제는 찾기 힘들 수도 있다
+
+우리나라에서는 버그헌팅 또한 모의해킹처럼 시작할 때 서약을 쓰고 들어가거나 특정 인원만 받아서 한다
+
+#### 버그헌팅 윤리
+
+> 조심해야할 케이스
+
+- 다른 일반인들이 취약점을 찾고 있다는 것을 모르게 해라
+
+취약점 기능을 찾던 중 메세지를 보내는 기능을 찾았는데 이 기능을 이용해서 일반 사용자에게 연락이 가게 된다면 문제가 생긴다!
+
+게시판이 있다고 여기에 우리가 배운 알람을 띄우는 페이로드를 넣게 되었을 때 실제 운영하는 사이트를 사용하는 사용자에게 뜨게 된다면 문제가 생긴다!
+
+취약점을 찾을 때에는 알고 사용해라!
+
+- 서비스에 장애가 생기지 않게 해라
+
+`rm -rf /`... 이건 말 안해도...
+
+또한 DB를 건드릴 수 있을 때 테스트 데이터를 만들어서 하거나 본인 것이 아닌 일반 사용자들의 데이터를 지우거나 덮어씌우지 마라
+
+고로 가능하면 본인이 만든 자동화 툴이 아니라면 어떤 작업을 하게 될지 모르니 쓰지 않는 것이 좋다
+
+- 남의 정보 Dump 금지
+
+당연하겠지만 만약에 비인가 취약점을 발견하게 되어 개인정보를 보거나 다운받을 수 있게 된다면 본인 혹은 팀원의 정보를 Dump해서 보고서를 작성하여라
+
+혹여나 본인 계정을 만들 수 없는 상황이라면 랜덤한 사람의 정보를 이용해라, 당연하지만 절대로 보고서 외에 다른 이에게는 보내선 안된다. 아무리 친한 사람이나 가족이여도 금물!
+
+- 타겟 도메인 잘 확인하기
+
+우리가 취약점을 찾는 도메인이 아닌 다른 도메인을 공격하면 절대 안된다! 정말로 타겟인지 아닌지 꼭 확인하면서 찾을 것! 가능하면 `Burpsuite`에서 `scope`기능을 사용하는 것이 좋다
+
+#### 몸풀기
+
+강사님이 만든 테스트 사이트에서 취약점을 찾는 것!
+
+`ctf.segfaulthub.com:9191`사이트에서 버그헌팅을 하는 것이였다
+
+나는 첫날까지만 해도 아무것도 아는 것이 없었기에 리더가 되었지만서도 깎두기로서 팀원이 찾은 취약점을 보고서로 만들어서 제출하는 역할을 맡았다
+
+아쉽게도 우리는 파일 다운로드 취약점을 찾아냈지만 이미 다른 팀에서 제출한 거였다! 이런!
+
+끝난 뒤 다같이 모여서 그동안 찾은 취약점들을 공유하고 강사님께서 우리가 찾지 못한 취약점을 알려주셨다
+
+이렇게 버그헌팅 실습훈련의 첫날이 끝났다!!
 
 ### 2일차 2024-10-08
 
 ### 3일차 2024-10-09
 
 ### 4일차 2024-10-10
+
+## 추후 일정
+
+![일정](https://github.com/user-attachments/assets/29d01686-0a82-484f-90a5-70dc9d8f8022)
+
+어우 최근에 갑자기 삘받아서 `KISA Academy`에 있는 과정 중에 흥미로워 보이는 것들을 전부 신청했더니 시간표가 뭔가 많아졌다
+
+뭔가 서순이 잘못된 것 같지만 이것을 기록하는 오늘부터 `버그헌팅 실습훈련 초급과정`이 시작된다
+
+이론을 배우고 실습을 했어야했는데! 살짝 아쉽달까?
+
+그래도 다음번(아마도 공익근무중일 때이겠지만)에 또 기회가 된다면 이번에는 조금 더 잘 할 수 있을 것같다
+
+ᓚᘏᗢ
